# PreCommit

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  PreCommit.cmake  README.md
.github/workflows/: TestsLinux.yml  TestsMacOS.yml  TestsWindows.yml
tests/: CMakeLists.txt
